--- a/src/main/resources/lang/dokey_en.properties
+++ b/src/main/resources/lang/dokey_en.properties
@@ -1,3 +1,28 @@
 open_editor=Open Editor
 settings=Settings
 exit=Exit
+initializing=Initializing...
+starting_service=Starting service...
+connected=Connected
+not_connected=Not connected
+dokey_init=Dokey Initialization
+reload=Reload
+add_application=Add Application...
+show_applications=Show Applications
+hide_applications=Hide Applications
+delete_confirmation=Delete Confirmation
+delete_confirmation_msg=Do you really want to delete the page?
+export_layout=Export Layout
+save_error=Error
+save_error_msg=There was an error saving the file
+import_layout=Import Layout
+buttons_delete_confirmation=Delete Confirmation
+buttons_delete_confirmation_msg=Some buttons will be deleted if you resize the page, are you sure?
+change_grid_size=Change Grid Size
+change_grid_size_msg=Specify the grid size below.\nThe rows and the columns must be a number greater than 0
+rows=Rows
+columns=Columns
+change_grid_size_error=Error
+change_grid_size_error_msg=The size must be a valid number!
+change_grid_size_error_msg2=The rows and the columns must be a number greater than 0.
+select_icon=Select the Icon
