--- a/src/main/resources/lang/dokey_en.properties
+++ b/src/main/resources/lang/dokey_en.properties
@@ -26,3 +26,44 @@ change_grid_size_error=Error
 change_grid_size_error_msg=The size must be a valid number!
 change_grid_size_error_msg2=The rows and the columns must be a number greater than 0.
 select_icon=Select the Icon
+shortcut=Shortcut
+shortcut_not_specified=Shortcut Not Specified
+shortcut_not_specified_msg=You haven't selected any shortcut yet!
+shortcut_not_specified_msg2=Please go back and type the keyboard keys or Cancel...
+change_icon_btn=Change icon...
+select_icon_btn=Select icon...
+applications=Applications
+overwrite_button=Overwrite Button
+overwrite_button_msg=Are you sure you want to overwrite this button?
+overwrite_button_msg2=If you proceed, a button will be deleted.
+edit=Edit
+delete=Delete
+open_layout=Open Layout...
+export=Export...
+delete_section_msg=Are you sure you want to delete this section?
+delete_section_msg2=If you proceed, the section will be deleted.
+select_external_app=Select external application...
+cannot_start_automatically=Unfortunately, Dokey cannot be started on system startup!
+cache_deleted=Cache Deleted!
+cache_deleted_msg=Cache have been successfully deleted, now the app will close...
+web_link=Web Link
+system_controls=System Controls
+application=Application
+add_app=Add Application
+add_shortcut=Add Shortcut
+system=System
+add_system=Add System Control
+folder=Folder
+add_folder=Add Folder
+choose_the_folder=Choose the Folder
+add_web_link=Add Web Link
+launchpad=Launchpad
+launchpad_desc=The main application launcher
+system_desc=The system control launchpad
+target_not_found=Not Found
+target_not_found_msg=Can't find the target application, please select it manually.
+os_incompatibility=OS Incompatibility Detected
+os_incompatibility_msg=This layout was created with another Operating System.
+os_incompatibility_msg2=You can still import it with the Compatibility Mode, but it may not work as expected.\nDo you want to proceed anyway?
+move_left=Move Left
+move_right=Move Right
