--- a/src/main/resources/lang/dokey_en.properties
+++ b/src/main/resources/lang/dokey_en.properties
@@ -67,3 +67,32 @@ os_incompatibility_msg=This layout was created with another Operating System.
 os_incompatibility_msg2=You can still import it with the Compatibility Mode, but it may not work as expected.\nDo you want to proceed anyway?
 move_left=Move Left
 move_right=Move Right
+search_application=Search Application...
+cancel=Cancel
+select=Select
+target=Target
+change=Change...
+invalid_items=Invalid Items
+invalid_items_msg=Some items can't be imported because they require resources not present in this system:
+avoid_importing_invalid_items=Avoid importing invalid items in the layout
+options=Options
+compatibility_mode=Use Compatibility Mode
+start_dokey_startup=Start Dokey at system startup.
+grab_a_coffee=Grab a coffee, it may take a while :)
+rotate_view=Rotate View
+get_help=Get Help
+general=General
+cache_and_data=Cache and Data
+cache_and_data_msg=Clear the application cache. NOTE: the app must be restarted afterwards.
+clear_cache=Clear Cache
+credits=Credits
+click_on_the_field_below=Click on the field below and press the keys to record a shortcut
+click_here_to_enter_the_shortcut=Click here to enter the shortcut
+enter_shortcut_name=Enter the shortcut name below ( optional ):
+shortcut_name=Shortcut name
+search_icon=Search icon...
+ask_for_confirmation=Ask for confirmation
+insert_url_below=Insert the URL in the field below:
+insert_url_here=Insert the URL here...
+title=Title ( optional )
+title_msg=Insert the page title here
