--- a/src/main/resources/lang/dokey_en.properties
+++ b/src/main/resources/lang/dokey_en.properties
@@ -40,8 +40,8 @@ edit=Edit
 delete=Delete
 open_layout=Open Layout...
 export=Export...
-delete_section_msg=Are you sure you want to delete this section?
-delete_section_msg2=If you proceed, the section will be deleted.
+delete_section_msg=Are you sure you want to delete this layout?
+delete_section_msg2=If you proceed, the layout will be deleted.
 select_external_app=Select external application...
 cannot_start_automatically=Unfortunately, Dokey cannot be started on system startup!
 cache_deleted=Cache Deleted!
