--- a/src/main/resources/lang/dokey_it.properties
+++ b/src/main/resources/lang/dokey_it.properties
@@ -2,3 +2,97 @@ open_editor=Apri Editor
 settings=Preferenze
 exit=Esci
 initializing=Inizializzazione...
+starting_service=Avviamento...
+connected=Connesso
+not_connected=Non connesso
+dokey_init=Inizializzazione Dokey
+reload=Ricarica
+add_application=Aggiungi Applicazione...
+show_applications=Mostra Applicazioni
+hide_applications=Nascondi Applicazioni
+delete_confirmation=Conferma Eliminazione
+delete_confirmation_msg=Vuoi davvero eliminare la pagina?
+export_layout=Esporta Layout
+save_error=Errore
+save_error_msg=Si è verificato un errore salvando la pagina.
+import_layout=Importa Layout
+buttons_delete_confirmation=Conferma Eliminazione
+buttons_delete_confirmation_msg=Alcuni bottoni verranno eliminati se ridimensioni la pagina, sei sicuro?
+change_grid_size=Cambia Dimensione Griglia
+change_grid_size_msg=Specifica la dimensione qui sotto.\nLe righe e le colonne devono essere un numero maggiore di 0.
+rows=Righe
+columns=Colonne
+change_grid_size_error=Errore
+change_grid_size_error_msg=La dimensione deve essere un numero valido!
+change_grid_size_error_msg2=Le righe e le colonne devono essere un numero maggiore di 0.
+select_icon=Seleziona l'icona
+shortcut=Scorciatoie
+shortcut_not_specified=Scorciatoia non specificata
+shortcut_not_specified_msg=Non hai ancora specificato nessuna scorciatoia!
+shortcut_not_specified_msg2=Per favore, digita la scorciatoia o annulla...
+change_icon_btn=Cambia icona...
+select_icon_btn=Seleziona icona...
+applications=Applicazioni
+overwrite_button=Sovrascrivi Bottone
+overwrite_button_msg=Sei sicuro di voler sovrascrivere il bottone?
+overwrite_button_msg2=Se procedi, un bottone verrà eliminato.
+edit=Modifica
+delete=Elimina
+open_layout=Apri Layout...
+export=Esporta...
+delete_section_msg=Sei sicuro di voler eliminare questo layout?
+delete_section_msg2=Se procedi, il layout verrà eliminato.
+select_external_app=Seleziona applicazione esterna...
+cannot_start_automatically=Purtroppo, Dokey non può essere avviato all'avvio del sistema.
+cache_deleted=Cache eliminata!
+cache_deleted_msg=La cache è stata eliminata con successo, ora l'applicazione terminerà.
+web_link=Link Web
+system_controls=Controllo di Sistema
+application=Applicazione
+add_app=Aggiungi Applicazione
+add_shortcut=Aggiungi Scorciatoia
+system=Controllo di Sistema
+add_system=Aggiungi Controllo di Sistema
+folder=Cartella
+add_folder=Aggiungi Cartella
+choose_the_folder=Scegli la cartella
+add_web_link=Aggiungi Link Web
+launchpad=Launchpad
+launchpad_desc=Launcher principale.
+system_desc=Launcher dei controlli di sistema.
+target_not_found=Non trovato.
+target_not_found_msg=L'applicazione non è stata trovata, per favore specificala manualmente.
+os_incompatibility=Incompatibilità del sistema operativo.
+os_incompatibility_msg=Questo Layout è stato creato con un altro sistema operativo.
+os_incompatibility_msg2=Puoi comunque importarlo con la Modalità Compatibilità, ma potrebbe non funzionare correttamente.\nVuoi procedere comunque?
+move_left=Muovi a Sinistra
+move_right=Muovi a Destra
+search_application=Cerca applicazione...
+cancel=Annulla
+select=Seleziona
+target=Target
+change=Cambia...
+invalid_items=Elementi non validi
+invalid_items_msg=Alcuni elementi non possono essere importati perchè contengono risorse non disponibili su questo sistema:
+avoid_importing_invalid_items=Non importare gli elementi non validi.
+options=Opzioni
+compatibility_mode=Usa la Modalità Compatibilità
+start_dokey_startup=Avvia Dokey all'accensione del sistema.
+grab_a_coffee=Prendi un caffè, ci vorrà un pò :)
+rotate_view=Ruota Vista
+get_help=Ottieni Aiuto
+general=Generale
+cache_and_data=Cache e Dati
+cache_and_data_msg=Cancella la Cache. NOTA: L'applicazione dovrà essere riavviata.
+clear_cache=Cancella Cache.
+credits=Crediti
+click_on_the_field_below=Clicca sul campo in basso per digitare la Scorciatoia.
+click_here_to_enter_the_shortcut=Clicca qui per digitare la Scorciatoia.
+enter_shortcut_name=Inserisci il nome della scorciatoia ( Opzionale )
+shortcut_name=Nome scorciatoia
+search_icon=Cerca icona...
+ask_for_confirmation=Prima chiedi conferma.
+insert_url_below=Inserisci l'URL nel campo sottostante.
+insert_url_here=Inserisci qui l'URL
+title=Titolo ( opzionale )
+title_msg=Inserisci il titolo della pagina qui.
