--- a/src/main/resources/lang/dokey_en.properties
+++ b/src/main/resources/lang/dokey_en.properties
@@ -96,3 +96,7 @@ insert_url_below=Insert the URL in the field below:
 insert_url_here=Insert the URL here...
 title=Title ( optional )
 title_msg=Insert the page title here
+device_connected=Device Connected!
+connected_to=Connected to:
+device_disconnected=Device Disconnected!
+disconnected_from=Disconnected from:
