--- a/src/main/resources/lang/dokey_it.properties
+++ b/src/main/resources/lang/dokey_it.properties
@@ -96,3 +96,7 @@ insert_url_below=Inserisci l'URL nel campo sottostante.
 insert_url_here=Inserisci qui l'URL
 title=Titolo ( opzionale )
 title_msg=Inserisci il titolo della pagina qui.
+device_connected=Device Connected!
+connected_to=Connected to:
+device_disconnected=Device Disconnected!
+disconnected_from=Disconnected from:
