--- a/src/main/resources/lang/dokey_it.properties
+++ b/src/main/resources/lang/dokey_it.properties
@@ -47,19 +47,19 @@ cannot_start_automatically=Purtroppo, Dokey non può essere avviato all'avvio del
 cache_deleted=Cache eliminata!
 cache_deleted_msg=La cache è stata eliminata con successo, ora l'applicazione terminerà.
 web_link=Link Web
-system_controls=Controllo di Sistema
+system_controls=Comandi di Sistema
 application=Applicazione
 add_app=Aggiungi Applicazione
 add_shortcut=Aggiungi Scorciatoia
-system=Controllo di Sistema
-add_system=Aggiungi Controllo di Sistema
+system=Sistema
+add_system=Aggiungi Comando di Sistema
 folder=Cartella
 add_folder=Aggiungi Cartella
 choose_the_folder=Scegli la cartella
 add_web_link=Aggiungi Link Web
 launchpad=Launchpad
 launchpad_desc=Launcher principale.
-system_desc=Launcher dei controlli di sistema.
+system_desc=Launcher dei comandi di sistema.
 target_not_found=Non trovato.
 target_not_found_msg=L'applicazione non è stata trovata, per favore specificala manualmente.
 os_incompatibility=Incompatibilità del sistema operativo.
