Add help in tray menu

--- a/src/main/resources/lang/dokey_it.properties
+++ b/src/main/resources/lang/dokey_it.properties
@@ -80,7 +80,7 @@ compatibility_mode=Usa la Modalità Compatibilità
 start_dokey_startup=Avvia Dokey all'accensione del sistema.
 grab_a_coffee=Prendi un caffè, ci vorrà un pò :)
 rotate_view=Ruota Vista
-get_help=Ottieni Aiuto
+get_help=Aiuto
 general=Generale
 cache_and_data=Cache e Dati
 cache_and_data_msg=Cancella la Cache. NOTA: L'applicazione dovrà essere riavviata.
