Improve launchpad default, web link dialog and version dialogs

--- a/src/main/resources/lang/dokey_en.properties
+++ b/src/main/resources/lang/dokey_en.properties
@@ -100,3 +100,5 @@ device_connected=Device Connected!
 connected_to=Connected to:
 device_disconnected=Device Disconnected!
 disconnected_from=Disconnected from:
+download=Download
+visit_playstore=Visit Play Store
