--- a/src/main/resources/lang/dokey_it.properties
+++ b/src/main/resources/lang/dokey_it.properties
@@ -100,3 +100,5 @@ device_connected=Connesso!
 connected_to=Connesso a:
 device_disconnected=Disconnesso!
 disconnected_from=Disconnesso da:
+download=Scarica
+visit_playstore=Vai sul Play Store
