--- a/src/main/resources/lang/dokey_en.properties
+++ b/src/main/resources/lang/dokey_en.properties
@@ -102,3 +102,4 @@ device_disconnected=Device Disconnected!
 disconnected_from=Disconnected from:
 download=Download
 visit_playstore=Visit Play Store
+toggle_search=Toggle Dokey Search
