--- a/src/main/resources/lang/dokey_it.properties
+++ b/src/main/resources/lang/dokey_it.properties
@@ -102,3 +102,4 @@ device_disconnected=Disconnesso!
 disconnected_from=Disconnesso da:
 download=Scarica
 visit_playstore=Vai sul Play Store
+toggle_search=Apri Dokey Search
