Improve quick actions

--- a/src/main/resources/lang/dokey_en.properties
+++ b/src/main/resources/lang/dokey_en.properties
@@ -103,3 +103,4 @@ disconnected_from=Disconnected from:
 download=Download
 visit_playstore=Visit Play Store
 toggle_search=Toggle Dokey Search
+quick_commands=Quick Commands
