--- a/src/main/resources/lang/dokey_it.properties
+++ b/src/main/resources/lang/dokey_it.properties
@@ -103,3 +103,4 @@ disconnected_from=Disconnesso da:
 download=Scarica
 visit_playstore=Vai sul Play Store
 toggle_search=Apri Dokey Search
+quick_commands=Comandi Rapidi
