Improved quick commands editor

--- a/src/main/resources/lang/dokey_en.properties
+++ b/src/main/resources/lang/dokey_en.properties
@@ -104,3 +104,5 @@ download=Download
 visit_playstore=Visit Play Store
 toggle_search=Toggle Dokey Search
 quick_commands=Quick Commands
+add_command=Add Quick Command
+remove_command=Remove Selected Commands
