--- a/src/main/resources/lang/dokey_it.properties
+++ b/src/main/resources/lang/dokey_it.properties
@@ -104,3 +104,5 @@ download=Scarica
 visit_playstore=Vai sul Play Store
 toggle_search=Apri Dokey Search
 quick_commands=Comandi Rapidi
+add_command=Aggiungi Comando Rapido
+remove_command=Rimuovi Comandi selezionati
