--- a/src/main/resources/lang/dokey_en.properties
+++ b/src/main/resources/lang/dokey_en.properties
@@ -106,3 +106,16 @@ toggle_search=Toggle Dokey Search
 quick_commands=Quick Commands
 add_command=Add Quick Command
 remove_command=Remove Selected Commands
+manage_quick_commands=Manage Quick Commands
+command_label=Command:
+action_label=Action:
+name_optional=Name ( optional ):
+select_action=Select Action
+change_action=Change Action
+items_delete_message=Are you sure you want to delete these items?
+command=Command
+name=Name
+action=Action
+no_action_specified=No Action specified.
+add=Add
+save=Save
