--- a/src/main/resources/lang/dokey_it.properties
+++ b/src/main/resources/lang/dokey_it.properties
@@ -106,3 +106,16 @@ toggle_search=Apri Dokey Search
 quick_commands=Comandi Rapidi
 add_command=Aggiungi Comando Rapido
 remove_command=Rimuovi Comandi selezionati
+manage_quick_commands=Gestisci Comandi Rapidi
+command_label=Comando:
+action_label=Azione:
+name_optional=Nome ( opzionale ):
+select_action=Seleziona Azione
+change_action=Cambia Azione
+items_delete_message=Sei sicuro di voler cancellare questi elementi?
+command=Comando
+name=Nome
+action=Azione
+no_action_specified=Nessuna Azione specificata
+add=Aggiungi
+save=Salva
