Improved menu item

--- a/src/main/resources/lang/dokey_en.properties
+++ b/src/main/resources/lang/dokey_en.properties
@@ -106,7 +106,7 @@ toggle_search=Toggle Dokey Search
 quick_commands=Quick Commands
 add_command=Add Quick Command
 remove_command=Remove Selected Commands
-manage_quick_commands=Manage Quick Commands
+manage_quick_commands=Quick Commands
 command_label=Command:
 action_label=Action:
 name_optional=Name ( optional ):
