--- a/src/main/resources/lang/dokey_it.properties
+++ b/src/main/resources/lang/dokey_it.properties
@@ -106,7 +106,7 @@ toggle_search=Apri Dokey Search
 quick_commands=Comandi Rapidi
 add_command=Aggiungi Comando Rapido
 remove_command=Rimuovi Comandi selezionati
-manage_quick_commands=Gestisci Comandi Rapidi
+manage_quick_commands=Comandi Rapidi
 command_label=Comando:
 action_label=Azione:
 name_optional=Nome ( opzionale ):
