Add setting to enable/disable dokey search. Fix #149

--- a/src/main/resources/lang/dokey_it.properties
+++ b/src/main/resources/lang/dokey_it.properties
@@ -119,3 +119,5 @@ action=Azione
 no_action_specified=Nessuna Azione specificata
 add=Aggiungi
 save=Salva
+dokey_search=Dokey Search
+enable_dokey_search=Attiva Dokey Search premendo ALT + BARRA SPAZIATRICE
