--- a/src/main/resources/lang/dokey_en.properties
+++ b/src/main/resources/lang/dokey_en.properties
@@ -119,3 +119,5 @@ action=Action
 no_action_specified=No Action specified.
 add=Add
 save=Save
+dokey_search=Dokey Search
+enable_dokey_search=Enable Dokey Search when pressing ALT + SPACE
