--- a/src/main/resources/lang/dokey_en.properties
+++ b/src/main/resources/lang/dokey_en.properties
@@ -121,3 +121,20 @@ add=Add
 save=Save
 dokey_search=Dokey Search
 enable_dokey_search=Enable Dokey Search when pressing ALT + SPACE
+open_settings=Open Settings
+open_commands=Open Quick Commands
+open=Open
+navigate_to=Navigate to
+no_application_selected=No application currently selected
+open_application=Open Application
+select_application=Select Application...
+dokey_control=Dokey Control
+no_folder_selected=No folder currently selected
+open_folder=Open Folder
+select_folder=Select Folder...
+navigate_to_url=Navigate to URL
+result_of_expression=The result of the expression is:
+search=Search
+on_google=on Google
+execute=Execute
+in_the_terminal=in the Terminal
