--- a/src/main/resources/lang/dokey_it.properties
+++ b/src/main/resources/lang/dokey_it.properties
@@ -121,3 +121,20 @@ add=Aggiungi
 save=Salva
 dokey_search=Dokey Search
 enable_dokey_search=Attiva Dokey Search premendo ALT + BARRA SPAZIATRICE
+open_settings=Apri Preferenze
+open_commands=Apri Comandi Rapidi
+open=Apri
+navigate_to=Naviga su
+no_application_selected=Nessuna applicatione selezionata
+open_application=Apri Applicazione
+select_application=Seleziona Applicazione...
+dokey_control=Controllo Dokey
+no_folder_selected=Nessuna cartella selezionata
+open_folder=Apri Cartella
+select_folder=Seleziona Cartella...
+navigate_to_url=Naviga su URL
+result_of_expression=Il risultato dell'espressione è:
+search=Cerca
+on_google=su Google
+execute=Esegui
+in_the_terminal=sul Terminale
