Improve search bar

--- a/src/main/resources/lang/dokey_en.properties
+++ b/src/main/resources/lang/dokey_en.properties
@@ -138,3 +138,11 @@ search=Search
 on_google=on Google
 execute=Execute
 in_the_terminal=in the Terminal
+application_category=Applications
+bookmark_category=Bookmarks
+calculator_category=Calculator
+debug_category=Debug
+google_search_category=Google
+quick_commands_category=Quick Commands
+shortcut_category=Shortcuts
+terminal_category=Terminal
