--- a/src/main/resources/lang/dokey_it.properties
+++ b/src/main/resources/lang/dokey_it.properties
@@ -138,3 +138,11 @@ search=Cerca
 on_google=su Google
 execute=Esegui
 in_the_terminal=sul Terminale
+application_category=Applicazioni
+bookmark_category=Preferiti
+calculator_category=Calcolatrice
+debug_category=Debug
+google_search_category=Google
+quick_commands_category=Comandi
+shortcut_category=Scorciatoie
+terminal_category=Terminale
