--- a/src/main/resources/lang/dokey_en.properties
+++ b/src/main/resources/lang/dokey_en.properties
@@ -146,3 +146,4 @@ google_search_category=Google
 quick_commands_category=Quick Commands
 shortcut_category=Shortcuts
 terminal_category=Terminal
+add_url_to_quick_commands_category=Add URL
