--- a/src/main/resources/lang/dokey_it.properties
+++ b/src/main/resources/lang/dokey_it.properties
@@ -146,3 +146,4 @@ google_search_category=Google
 quick_commands_category=Comandi
 shortcut_category=Scorciatoie
 terminal_category=Terminale
+add_url_to_quick_commands_category=Aggiungi URL
