--- a/src/main/resources/lang/dokey_en.properties
+++ b/src/main/resources/lang/dokey_en.properties
@@ -147,3 +147,5 @@ quick_commands_category=Quick Commands
 shortcut_category=Shortcuts
 terminal_category=Terminal
 add_url_to_quick_commands_category=Add URL
+export_commands=Export selected commands
+import_commands=Import commands
