--- a/src/main/resources/lang/dokey_it.properties
+++ b/src/main/resources/lang/dokey_it.properties
@@ -147,3 +147,5 @@ quick_commands_category=Comandi
 shortcut_category=Scorciatoie
 terminal_category=Terminale
 add_url_to_quick_commands_category=Aggiungi URL
+export_commands=Esporta comandi selezionati
+import_commands=Importa comandi
