Gradient tab experiment

--- a/src/main/resources/lang/dokey_en.properties
+++ b/src/main/resources/lang/dokey_en.properties
@@ -149,3 +149,4 @@ terminal_category=Terminal
 add_url_to_quick_commands_category=Add URL
 export_commands=Export selected commands
 import_commands=Import commands
+send_files=Send Files
