--- a/src/main/resources/lang/dokey_it.properties
+++ b/src/main/resources/lang/dokey_it.properties
@@ -149,3 +149,4 @@ terminal_category=Terminale
 add_url_to_quick_commands_category=Aggiungi URL
 export_commands=Esporta comandi selezionati
 import_commands=Importa comandi
+send_files=Send Files
