--- a/src/main/resources/lang/dokey_en.properties
+++ b/src/main/resources/lang/dokey_en.properties
@@ -143,7 +143,7 @@ bookmark_category=Bookmarks
 calculator_category=Calculator
 debug_category=Debug
 google_search_category=Google
-quick_commands_category=Quick Commands
+commands_category=Commands
 shortcut_category=Shortcuts
 terminal_category=Terminal
 add_url_to_quick_commands_category=Add URL
