Initial qr code generation and UI

--- a/src/main/resources/lang/dokey_en.properties
+++ b/src/main/resources/lang/dokey_en.properties
@@ -150,3 +150,5 @@ add_url_to_quick_commands_category=Add URL
 export_commands=Export selected commands
 import_commands=Import commands
 send_files=Send Files
+connect_dokey_app=Connect Dokey App
+connect_dokey_app_desc=Scan this QR code using Dokey App from your mobile device
