--- a/src/main/resources/lang/dokey_it.properties
+++ b/src/main/resources/lang/dokey_it.properties
@@ -150,3 +150,5 @@ add_url_to_quick_commands_category=Aggiungi URL
 export_commands=Esporta comandi selezionati
 import_commands=Importa comandi
 send_files=Send Files
+connect_dokey_app=Connetti Dokey App
+connect_dokey_app_desc=Scansiona questo QR code usando Dokey App dal tuo dispositivo mobile
