Complete ui for devices tab

--- a/src/main/resources/lang/dokey_en.properties
+++ b/src/main/resources/lang/dokey_en.properties
@@ -152,3 +152,4 @@ import_commands=Import commands
 send_files=Send Files
 connect_dokey_app=Connect Dokey App
 connect_dokey_app_desc=Scan this QR code using Dokey App from your mobile device
+connected_devices=Connected Devices
