--- a/src/main/resources/lang/dokey_it.properties
+++ b/src/main/resources/lang/dokey_it.properties
@@ -152,3 +152,4 @@ import_commands=Importa comandi
 send_files=Send Files
 connect_dokey_app=Connetti Dokey App
 connect_dokey_app_desc=Scansiona questo QR code usando Dokey App dal tuo dispositivo mobile
+connected_devices=Dispositivi connessi
