Improve calculator on search bar

--- a/src/main/resources/lang/dokey_en.properties
+++ b/src/main/resources/lang/dokey_en.properties
@@ -153,3 +153,5 @@ send_files=Send Files
 connect_dokey_app=Connect Dokey App
 connect_dokey_app_desc=Scan this QR code using Dokey App from your mobile device
 connected_devices=Connected Devices
+hex_conversion=Hexadecimal representation for number
+bin_conversion=Binary representation for number
