--- a/src/main/resources/lang/dokey_it.properties
+++ b/src/main/resources/lang/dokey_it.properties
@@ -14,7 +14,7 @@ delete_confirmation=Conferma Eliminazione
 delete_confirmation_msg=Vuoi davvero eliminare la pagina?
 export_layout=Esporta Layout
 save_error=Errore
-save_error_msg=Si è verificato un errore salvando la pagina.
+save_error_msg=Si ï¿½ verificato un errore salvando la pagina.
 import_layout=Importa Layout
 buttons_delete_confirmation=Conferma Eliminazione
 buttons_delete_confirmation_msg=Alcuni bottoni verranno eliminati se ridimensioni la pagina, sei sicuro?
@@ -35,17 +35,17 @@ select_icon_btn=Seleziona icona...
 applications=Applicazioni
 overwrite_button=Sovrascrivi Bottone
 overwrite_button_msg=Sei sicuro di voler sovrascrivere il bottone?
-overwrite_button_msg2=Se procedi, un bottone verrà eliminato.
+overwrite_button_msg2=Se procedi, un bottone verrï¿½ eliminato.
 edit=Modifica
 delete=Elimina
 open_layout=Apri Layout...
 export=Esporta...
 delete_section_msg=Sei sicuro di voler eliminare questo layout?
-delete_section_msg2=Se procedi, il layout verrà eliminato.
+delete_section_msg2=Se procedi, il layout verrï¿½ eliminato.
 select_external_app=Seleziona applicazione esterna...
-cannot_start_automatically=Purtroppo, Dokey non può essere avviato all'avvio del sistema.
+cannot_start_automatically=Purtroppo, Dokey non puï¿½ essere avviato all'avvio del sistema.
 cache_deleted=Cache eliminata!
-cache_deleted_msg=La cache è stata eliminata con successo, ora l'applicazione terminerà.
+cache_deleted_msg=La cache ï¿½ stata eliminata con successo, ora l'applicazione terminerï¿½.
 web_link=Link Web
 system_controls=Comandi di Sistema
 application=Applicazione
@@ -61,10 +61,10 @@ launchpad=Launchpad
 launchpad_desc=Launcher principale.
 system_desc=Launcher dei comandi di sistema.
 target_not_found=Non trovato.
-target_not_found_msg=L'applicazione non è stata trovata, per favore specificala manualmente.
-os_incompatibility=Incompatibilità del sistema operativo.
-os_incompatibility_msg=Questo Layout è stato creato con un altro sistema operativo.
-os_incompatibility_msg2=Puoi comunque importarlo con la Modalità Compatibilità, ma potrebbe non funzionare correttamente.\nVuoi procedere comunque?
+target_not_found_msg=L'applicazione non ï¿½ stata trovata, per favore specificala manualmente.
+os_incompatibility=Incompatibilitï¿½ del sistema operativo.
+os_incompatibility_msg=Questo Layout ï¿½ stato creato con un altro sistema operativo.
+os_incompatibility_msg2=Puoi comunque importarlo con la Modalitï¿½ Compatibilitï¿½, ma potrebbe non funzionare correttamente.\nVuoi procedere comunque?
 move_left=Muovi a Sinistra
 move_right=Muovi a Destra
 search_application=Cerca applicazione...
@@ -73,17 +73,17 @@ select=Seleziona
 target=Target
 change=Cambia...
 invalid_items=Elementi non validi
-invalid_items_msg=Alcuni elementi non possono essere importati perchè contengono risorse non disponibili su questo sistema:
+invalid_items_msg=Alcuni elementi non possono essere importati perchï¿½ contengono risorse non disponibili su questo sistema:
 avoid_importing_invalid_items=Non importare gli elementi non validi.
 options=Opzioni
-compatibility_mode=Usa la Modalità Compatibilità
+compatibility_mode=Usa la Modalitï¿½ Compatibilitï¿½
 start_dokey_startup=Avvia Dokey all'accensione del sistema.
-grab_a_coffee=Prendi un caffè, ci vorrà un pò :)
+grab_a_coffee=Prendi un caffï¿½, ci vorrï¿½ un pï¿½ :)
 rotate_view=Ruota Vista
 get_help=Aiuto
 general=Generale
 cache_and_data=Cache e Dati
-cache_and_data_msg=Cancella la Cache. NOTA: L'applicazione dovrà essere riavviata.
+cache_and_data_msg=Cancella la Cache. NOTA: L'applicazione dovrï¿½ essere riavviata.
 clear_cache=Cancella Cache.
 credits=Crediti
 click_on_the_field_below=Clicca sul campo in basso per digitare la Scorciatoia.
@@ -133,7 +133,7 @@ no_folder_selected=Nessuna cartella selezionata
 open_folder=Apri Cartella
 select_folder=Seleziona Cartella...
 navigate_to_url=Naviga su URL
-result_of_expression=Il risultato dell'espressione è:
+result_of_expression=Il risultato dell'espressione ï¿½:
 search=Cerca
 on_google=su Google
 execute=Esegui
@@ -153,3 +153,5 @@ send_files=Send Files
 connect_dokey_app=Connetti Dokey App
 connect_dokey_app_desc=Scansiona questo QR code usando Dokey App dal tuo dispositivo mobile
 connected_devices=Dispositivi connessi
+hex_conversion=Rappresentazione Esadecimale del numero
+bin_conversion=Rappresentazione Binaria del numero
